[package]
name = "transitionable"
version = "0.1.0"
edition = "2021"
description = "A no_std compatible type to transition `T -> T` where you have an `&mut T`."
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mickvangelderen/transitionable"
categories = ["data-structures", "rust-patterns", "no-std", "embedded"]
keywords = [
    "transition",
    "transitionable",
    "state",
    "machine",
    "state-machine",
    "takeable",
    "option",
    "takeable-option",
    "replace-with",
    "smart-pointer",
    "no-std",
    "lightweight",
]

[features]
_test = []
